--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ input[type=range]:focus::-ms-fill-upper {
 <body>
   <section class="controls">
     <div class="control">
-      <label for="amplitude">Amplitude</label>
+      <label for="amplitude">AMPLITUDE</label>
       <input id="amplitude" type="range" min="10" max="200" value="50">
     </div>
     <div class="control" style="display: none;">
@@ -242,7 +242,7 @@ input[type=range]:focus::-ms-fill-upper {
       <input id="wavelength" type="range" min="300" max="500" value="500">
     </div>
     <div class="control">
-      <label for="frequency">Frequency</label>
+      <label for="frequency">FREQUENCY</label>
       <input id="frequency" type="range" min="1" max="30" value="100">
     </div>
   </section>
